RESOLVED FIXED149291
Null dereference loading Blink layout test editing/execCommand/indent-nested-blockquotes-crash.html
https://bugs.webkit.org/show_bug.cgi?id=149291
Summary Null dereference loading Blink layout test editing/execCommand/indent-nested-...
Jon Honeycutt
Reported 2015-09-17 14:33:49 PDT
Null dereference loading Blink layout test editing/execCommand/indent-nested-blockquotes-crash.html. Stack trace: Crashed Thread: 0 Dispatch queue: com.apple.main-thread Exception Type: EXC_BAD_ACCESS (SIGSEGV) Exception Codes: KERN_INVALID_ADDRESS at 0x0000000000000048 Exception Note: EXC_CORPSE_NOTIFY VM Regions Near 0x48: --> __TEXT 000000010b1d4000-000000010b1d6000 [ 8K] r-x/rwx SM=COW /Users/USER/*/WebKit.framework/Versions/A/XPCServices/com.apple.WebKit.WebContent.Development.xpc/Contents/MacOS/com.apple.WebKit.WebContent.Development Application Specific Information: CRASHING TEST: temp-tests/editing/execCommand/indent-nested-blockquotes-crash.html Global Trace Buffer (reverse chronological seconds): 18446743998.232010 CFNetwork 0x00007fff88d43b97 Explicitly setting CF cookie storage singleton 18446743998.232620 CFNetwork 0x00007fff88d8f211 Explicitly setting cookie storage singleton Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x0000000113002b73 WebCore::CompositeEditCommand::insertNodeAfter(WTF::PassRefPtr<WebCore::Node>, WTF::PassRefPtr<WebCore::Node>) + 19 (CompositeEditCommand.cpp:357) 1 com.apple.WebCore 0x0000000113009547 WebCore::CompositeEditCommand::cloneParagraphUnderNewElement(WebCore::Position const&, WebCore::Position const&, WebCore::Node*, WebCore::Element*) + 1543 (StdLibExtras.h:367) 2 com.apple.WebCore 0x0000000113009e2d WebCore::CompositeEditCommand::moveParagraphWithClones(WebCore::VisiblePosition const&, WebCore::VisiblePosition const&, WebCore::Element*, WebCore::Node*) + 621 (CompositeEditCommand.cpp:1176) 3 com.apple.WebCore 0x0000000113465755 WebCore::IndentOutdentCommand::indentIntoBlockquote(WebCore::Position const&, WebCore::Position const&, WTF::RefPtr<WebCore::Element>&) + 901 (StdLibExtras.h:366) 4 com.apple.WebCore 0x0000000112f4b605 WebCore::ApplyBlockElementCommand::formatSelection(WebCore::VisiblePosition const&, WebCore::VisiblePosition const&) + 4677 (ApplyBlockElementCommand.cpp:145) 5 com.apple.WebCore 0x0000000112f4a04d WebCore::ApplyBlockElementCommand::doApply() + 1037 (Ref.h:123) 6 com.apple.WebCore 0x0000000113002216 WebCore::CompositeEditCommand::apply() + 102 (ScopedEventQueue.h:71) 7 com.apple.WebCore 0x0000000113235c4b WebCore::executeIndent(WebCore::Frame&, WebCore::Event*, WebCore::EditorCommandSource, WTF::String const&) + 59 (StdLibExtras.h:366) 8 com.apple.WebCore 0x0000000113234876 WebCore::Editor::Command::execute(WTF::String const&, WebCore::Event*) const + 182 (EditorCommand.cpp:1704) 9 com.apple.WebCore 0x000000011316dc36 WebCore::Document::execCommand(WTF::String const&, bool, WTF::String const&) + 214 (Document.cpp:4666) 10 com.apple.WebCore 0x0000000113584074 WebCore::jsDocumentPrototypeFunctionExecCommand(JSC::ExecState*) + 420 (JSCJSValue.h:499) 11 ??? 0x0000339671001028 0 + 56721233940520 12 com.apple.JavaScriptCore 0x00000001128e076f llint_entry + 22696 13 com.apple.JavaScriptCore 0x00000001128dace4 vmEntryToJavaScript + 299 14 com.apple.JavaScriptCore 0x000000011279b2d9 JSC::JITCode::execute(JSC::VM*, JSC::ProtoCallFrame*) + 169 (JITCode.cpp:82) 15 com.apple.JavaScriptCore 0x0000000112781d12 JSC::Interpreter::executeCall(JSC::ExecState*, JSC::JSObject*, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) + 450 (Interpreter.cpp:1008) 16 com.apple.JavaScriptCore 0x000000011244d8b7 JSC::call(JSC::ExecState*, JSC::JSValue, JSC::CallType, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&, WTF::NakedPtr<JSC::Exception>&) + 71 (MarkedBlock.h:241) 17 com.apple.WebCore 0x0000000113608fa4 WebCore::JSEventListener::handleEvent(WebCore::ScriptExecutionContext*, WebCore::Event*) + 996 (JSMainThreadExecState.h:56) 18 com.apple.WebCore 0x000000011326f4db WebCore::EventTarget::fireEventListeners(WebCore::Event*, WebCore::EventTargetData*, WTF::Vector<WebCore::RegisteredEventListener, 1ul, WTF::CrashOnOverflow, 16ul>&) + 635 (InspectorInstrumentation.h:285) 19 com.apple.WebCore 0x000000011326f1a0 WebCore::EventTarget::fireEventListeners(WebCore::Event*) + 224 (EventTarget.cpp:208) 20 com.apple.WebCore 0x00000001131fbbf4 WebCore::DOMWindow::dispatchEvent(WTF::PassRefPtr<WebCore::Event>, WTF::PassRefPtr<WebCore::EventTarget>) + 260 (DOMWindow.cpp:1900) 21 com.apple.WebCore 0x000000011320130b WebCore::DOMWindow::dispatchLoadEvent() + 347 (StdLibExtras.h:366) 22 com.apple.WebCore 0x0000000113164294 WebCore::Document::implicitClose() + 324 (Document.cpp:4077) 23 com.apple.WebCore 0x00000001132f1003 WebCore::FrameLoader::checkCompleted() + 275 (FrameLoader.cpp:839) 24 com.apple.WebCore 0x00000001132ef95b WebCore::FrameLoader::finishedParsing() + 123 (FrameLoader.cpp:760) 25 com.apple.WebCore 0x000000011316f281 WebCore::Document::finishedParsing() + 417 (Frame.h:377) 26 com.apple.WebCore 0x000000011339be05 WebCore::HTMLDocumentParser::prepareToStopParsing() + 165 (RefCounted.h:99) 27 com.apple.WebCore 0x000000011319f69a WebCore::DocumentWriter::end() + 58 (StdLibExtras.h:366) 28 com.apple.WebCore 0x00000001131879ec WebCore::DocumentLoader::finishedLoading(double) + 268 (ResourceErrorBase.h:42) 29 com.apple.WebCore 0x0000000112fb8179 WebCore::CachedResource::checkNotify() + 153 (CachedResourceClientWalker.h:51) 30 com.apple.WebCore 0x0000000112fb4433 WebCore::CachedRawResource::finishLoading(WebCore::SharedBuffer*) + 227 (CachedRawResource.cpp:104) 31 com.apple.WebCore 0x0000000113d2f501 WebCore::SubresourceLoader::didFinishLoading(double) + 1153 (ResourceLoader.h:154) 32 com.apple.WebKit 0x000000011187598d WebKit::WebResourceLoader::didReceiveWebResourceLoaderMessage(IPC::Connection&, IPC::MessageDecoder&) + 561 (HandleMessage.h:16) 33 com.apple.WebKit 0x000000011164f1f1 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::MessageDecoder, std::__1::default_delete<IPC::MessageDecoder> >) + 127 (memory:2636) 34 com.apple.WebKit 0x0000000111651b4a IPC::Connection::dispatchOneMessage() + 126 (memory:2656) 35 com.apple.JavaScriptCore 0x0000000112a93985 WTF::RunLoop::performWork() + 437 (functional:1742) 36 com.apple.JavaScriptCore 0x0000000112a93d32 WTF::RunLoop::performWork(void*) + 34 (RunLoopCF.cpp:39) 37 com.apple.CoreFoundation 0x00007fff949e2c01 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17 38 com.apple.CoreFoundation 0x00007fff949d4b1c __CFRunLoopDoSources0 + 556 39 com.apple.CoreFoundation 0x00007fff949d403f __CFRunLoopRun + 927 40 com.apple.CoreFoundation 0x00007fff949d3a38 CFRunLoopRunSpecific + 296 41 com.apple.HIToolbox 0x00007fff88e673bd RunCurrentEventLoopInMode + 235 42 com.apple.HIToolbox 0x00007fff88e67153 ReceiveNextEventCommon + 432 43 com.apple.HIToolbox 0x00007fff88e66f93 _BlockUntilNextEventMatchingListInModeWithFilter + 71 44 com.apple.AppKit 0x00007fff870b81e7 _DPSNextEvent + 1076 45 com.apple.AppKit 0x00007fff8748490d -[NSApplication _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 454 46 com.apple.AppKit 0x00007fff870ae0b8 -[NSApplication run] + 682 47 com.apple.AppKit 0x00007fff87030396 NSApplicationMain + 1176 48 libxpc.dylib 0x00007fff8c70ff70 _xpc_objc_main + 793 49 libxpc.dylib 0x00007fff8c7116bf xpc_main + 494 50 com.apple.WebKit.WebContent.Development 0x000000010b1d5424 main + 409 (XPCServiceMain.Development.mm:187) 51 libdyld.dylib 0x00007fff93aa15ad start + 1
Attachments
Patch (3.72 KB, patch)
2015-10-20 18:04 PDT, Jiewen Tan
no flags
Radar WebKit Bug Importer
Comment 1 2015-09-17 14:34:16 PDT
Jiewen Tan
Comment 2 2015-10-20 18:04:06 PDT
WebKit Commit Bot
Comment 3 2015-10-26 15:01:50 PDT
Comment on attachment 263645 [details] Patch Clearing flags on attachment: 263645 Committed r191603: <http://trac.webkit.org/changeset/191603>
WebKit Commit Bot
Comment 4 2015-10-26 15:01:56 PDT
All reviewed patches have been landed. Closing bug.
Ahmad Saleem
Comment 5 2022-11-15 09:34:37 PST
*** Bug 247950 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.