Null dereference loading Blink layout test editing/execCommand/indent-nested-blockquotes-crash.html https://bugs.webkit.org/show_bug.cgi?id=149291 <rdar://problem/22746473>

Patch by Jiewen Tan <jiewen_tan@apple.com> on 2015-10-26
Reviewed by Darin Adler.

Source/WebCore:

This is a merge of Blink r172967:
https://codereview.chromium.org/251723003

Test: editing/execCommand/indent-nested-blockquotes-crash.html

* editing/CompositeEditCommand.cpp:
(WebCore::CompositeEditCommand::insertNodeAfter):

LayoutTests:

* editing/execCommand/indent-nested-blockquotes-crash-expected.txt: Added.
* editing/execCommand/indent-nested-blockquotes-crash.html: Added.

Canonical link: https://commits.webkit.org/168722@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191603 268f45cc-cd09-0410-ab3c-d52691b4dbfc